PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/CorrectPatternCallRef.par
CorrectPatternCallRef {

map add([Int] input) : [Int] res{
    res[INDEX] = input[INDEX] + 1
}
seq main() : Void {
    var [Int] test = [0,0]
    test = add<<<>>>(test)
return 0
}
}