PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/CorrectPatternCallRef.par
CorrectPatternCallRef {

seq add([Int] input) : [Int] {
    return input + 1
}
seq main() : Void {
    var [Int] test = [0,0]
    test = add<<<>>>(test)

}
}